# wii-cmake-template

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE
src/: main.c  main.cpp
